used linked list instead of array list